tests/error/lessThanInteger-wrong-1st-argument-unit.uplc
(program 1.0.0[[(builtin lessThanInteger)(con unit ())](con integer 10)])